--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.2",
     "materialize-css": "^0.100.2",
     "page": "^1.7.1",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "title": "^1.0.0",
+    "yo-yo": "^1.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
