--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Kevin Marquez <marquezkrodriguez24@gmail.com> (https://www.npmjs.com/~kmarquez17)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "empty-element": "^1.0.0",
     "express": "^4.16.2",
