--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "empty-element": "^1.0.0",
     "express": "^4.16.2",
     "intl": "^1.2.5",
@@ -28,6 +29,9 @@
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^14.5.0",
     "gulp": "^3.9.1",
